--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
-[package]
-name = "ynab-crypto-portfolio-sync-rs"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+resolver = "2"
+members = ["crates/ynab-api", "crates/sync"]
 
-[dependencies]
+[workspace.dependencies]
+serde = { version = "^1.0", features = ["derive"] }
+serde_json = "^1.0"
+reqwest = { version = "^0.12" }
