--- a/crates/sync/Cargo.toml
+++ b/crates/sync/Cargo.toml
@@ -18,5 +18,6 @@ serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+binance-api = { path = "../binance-api" }
 ynab-api = { path = "../ynab-api" }
 tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
