chore: cache target folder in CI to increase build speed

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,13 +22,18 @@ jobs:
           key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
             ${{ runner.os }}-cargo-registry-
-
       - name: Cache cargo index
         uses: actions/cache@v3
         with:
           path: ~/.cargo/index
           key: ${{ runner.os }}-cargo-index
-
+      - name: Cache Cargo build artifacts
+        uses: actions/cache@v3
+        with:
+          path: target
+          key: ${{ runner.os }}-cargo-target-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-target-
       - uses: actions/checkout@v4
       - name: Build
         run: cargo build --verbose
