--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ members = ["crates/ynab-api", "crates/sync", "crates/binance-api"]
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
 reqwest = { version = "^0.12" }
+uuid = "1"
