--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,14 @@ resolver = "2"
 members = ["crates/ynab-api", "crates/sync", "crates/binance-api"]
 
 [workspace.dependencies]
-serde = { version = "^1.0", features = ["derive"] }
+chrono = "0.4"
+serde = { version = "^1.0" }
 serde_json = "^1.0"
 reqwest = { version = "^0.12" }
 uuid = "1"
+url = "^2.5"
+
+[profile.release]
+strip = true
+opt-level = "z"
+lto = true
