--- a/crates/binance-api/Cargo.toml
+++ b/crates/binance-api/Cargo.toml
@@ -8,12 +8,11 @@ license = "Unlicense"
 edition = "2021"
 
 [dependencies]
-chrono = { version = "0.4", features = ["serde"] }
+chrono = { workspace = true, features = ["serde"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 serde_repr = "^0.1"
-url = "^2.5"
-uuid = { version = "^1.8", features = ["serde", "v4"] }
+url = { workspace = true }
 reqwest = { workspace = true, features = ["json", "multipart"] }
 hmac = "0.12"
 sha2 = "0.10"
