--- a/crates/ynab-api/Cargo.toml
+++ b/crates/ynab-api/Cargo.toml
@@ -16,6 +16,6 @@ serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 serde_with = { version = "^3", default-features = false, features = ["base64", "std", "macros"] }
 serde_repr = "^0.1"
-url = "^2.5"
+url = { workspace = true }
 uuid = { workspace = true, features = ["serde", "v4"] }
 reqwest = { workspace = true, features = ["json", "multipart", "blocking"] }
