--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,10 @@
-RUST_LOG=INFO
 EVM_WALLETS=
 BTC_WALLETS=
+SOLANA_WALLETS=
 YNAB_KEY=
 YNAB_ACCOUNT_NAME=Crypto
 BINANCE_API_KEY=
 BINANCE_SECRET_KEY=
 WEBDRIVER_URL=http://localhost:4444
+TRUELAYER_CLIENT_ID=
+TRUELAYER_CLIENT_SECRET=
