--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,7 @@
 EVM_WALLETS=
 BTC_WALLETS=
 SOLANA_WALLETS=
-YNAB_KEY=
+YNAB_ACCESS_TOKEN=
 YNAB_ACCOUNT_NAME=Crypto
 BINANCE_API_KEY=
 BINANCE_SECRET_KEY=
