--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,9 @@
 name: Release
 
 on:
-  #  pull_request:
-  #    tags:
-  #      - "v*"
   push:
-#    tags:
-#      - "v*"
+    tags:
+      - "v*"
 
 jobs:
   release:
